# file-preview-daemon

./: Cargo.toml  README.md  config.example.toml  file-preview-daemon.py  waybar-module.jsonc
src/: config.rs  copy.rs  drag.rs  init.rs  main.rs  menu.rs  scroll.rs  state.rs  status.rs  watch.rs  watch_status.rs
