[package]
name = "glance"
version = "0.2.0"
edition = "2021"
description = "A file clipboard for Wayland — shows new files, thumbnails, drag-and-drop"
license = "MIT"

[[bin]]
name = "glance"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
gtk4 = "0.10"
gtk4-layer-shell = "0.7"
inotify = "0.11"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
